Setup Initial Proj Structure

--- a/PHWAndriod/PHWAndriod/AppShell.xaml
+++ b/PHWAndriod/PHWAndriod/AppShell.xaml
@@ -42,11 +42,13 @@
                                 <VisualState.Setters>
                                     <Setter Property="BackgroundColor" Value="{x:OnPlatform UWP=Transparent, iOS=White}" />
                                     <Setter TargetName="FlyoutItemLabel" Property="Label.TextColor" Value="{StaticResource Primary}" />
+                                    <Setter TargetName="FlyoutItemLabel" Property="Label.FontSize" Value="18" />
                                 </VisualState.Setters>
                             </VisualState>
                             <VisualState x:Name="Selected">
                                 <VisualState.Setters>
                                     <Setter Property="BackgroundColor" Value="{StaticResource Primary}" />
+                                    <Setter TargetName="FlyoutItemLabel" Property="Label.FontSize" Value="18" />
                                 </VisualState.Setters>
                             </VisualState>
                         </VisualStateGroup>
@@ -64,6 +66,7 @@
                             <VisualState x:Name="Normal">
                                 <VisualState.Setters>
                                     <Setter TargetName="FlyoutItemLabel" Property="Label.TextColor" Value="{StaticResource Primary}" />
+                                    <Setter TargetName="FlyoutItemLabel" Property="Label.FontSize" Value="18" />
                                 </VisualState.Setters>
                             </VisualState>
                         </VisualStateGroup>
@@ -78,18 +81,28 @@
         FlyoutDisplayOptions="AsMultipleItems" will create a separate flyout item for each child element    
         https://docs.microsoft.com/dotnet/api/xamarin.forms.shellgroupitem.flyoutdisplayoptions?view=xamarin-forms
     -->
-    <FlyoutItem Title="Home" Icon="icon_feed.png">
-        <ShellContent Route="Home" ContentTemplate="{DataTemplate local:Home}" />
+    <ShellContent Route="LoginPage" ContentTemplate="{DataTemplate local:LoginPage}" />
+    <FlyoutItem Title="Stock In" Icon="icon_stockin.png">
+        <ShellContent Route="StockInView" ContentTemplate="{DataTemplate local:StockinView}" />
     </FlyoutItem>
-    <FlyoutItem Title="About" Icon="icon_about.png">
-        <ShellContent Route="AboutPage" ContentTemplate="{DataTemplate local:AboutPage}" />
+    <FlyoutItem Title="Material Dispact/Re-Dispatch" Icon="icon_dispatch.png">
+        <ShellContent Route="MaterialDispatchView" ContentTemplate="{DataTemplate local:MaterialDispatchView}" />
     </FlyoutItem>
-    <FlyoutItem Title="Browse" Icon="icon_feed.png">
-        <ShellContent Route="ItemsPage" ContentTemplate="{DataTemplate local:ItemsPage}" />
+    <FlyoutItem Title="Material Booking" Icon="icon_booking.png">
+        <ShellContent Route="MaterialBookingView" ContentTemplate="{DataTemplate local:MaterialBookingView}" />
+    </FlyoutItem>
+    <FlyoutItem Title="Cancelled Booking Stock" Icon="icon_cancel.png">
+        <ShellContent Route="CancelBookingView" ContentTemplate="{DataTemplate local:CancelBookingView}" />
+    </FlyoutItem>
+    <FlyoutItem Title="Physical Verification" Icon="icon_verification.png">
+        <ShellContent Route="PhysicalVerificationView" ContentTemplate="{DataTemplate local:PhysicalVerificationView}" />
+    </FlyoutItem>
+    <FlyoutItem Title="Master Child Mapping"  Icon="icon_mapping.png">
+        <ShellContent Route="MasterChildMappingView" ContentTemplate="{DataTemplate local:MasterChildMappingView}" />
     </FlyoutItem>
 
     <!-- When the Flyout is visible this will be a menu item you can tie a click behavior to  -->
-    <MenuItem Text="Logout" StyleClass="MenuItemLayoutStyle" Clicked="OnMenuItemClicked">
+    <MenuItem Text="Logout" IconImageSource="icon_logout.png" StyleClass="MenuItemLayoutStyle" Clicked="OnMenuItemClicked">
     </MenuItem>
 
     <!--
@@ -99,9 +112,6 @@
         content you can do so by calling 
         await Shell.Current.GoToAsync("//LoginPage");
     -->
-    <TabBar>
-        <ShellContent Route="LoginPage" ContentTemplate="{DataTemplate local:LoginPage}" />
-    </TabBar>
 
     <!-- Optional Templates 
     // These may be provided inline as below or as separate classes.
