--- a/PHWAndriod/PHWAndriod/Views/MaterialDispatchView.xaml
+++ b/PHWAndriod/PHWAndriod/Views/MaterialDispatchView.xaml
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PHWAndriod.Views.Home">
+             Title="{Binding Title}"
+             x:Class="PHWAndriod.Views.MaterialDispatchView">
     <ContentPage.Content>
-        <StackLayout VerticalOptions="CenterAndExpand" Padding="5">
-            <Button Text="Sign Up" VerticalOptions="CenterAndExpand"
+        <StackLayout>
+            <Label Text="Welcome to Material Dispatch View!!!"
+                VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
     </ContentPage.Content>
