--- a/PHWAndriod/PHWAndriod/Views/StockinView.xaml
+++ b/PHWAndriod/PHWAndriod/Views/StockinView.xaml
@@ -6,7 +6,7 @@
     <ContentPage.Content>
             <StackLayout Margin="20" Spacing="30">
                 <StackLayout Orientation="Horizontal" Spacing="30" >
-                    <Label Text="Inventory Type" TextColor="Black" FontSize="20" FontAttributes="Bold" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand"/>
+                    <Label Text="Inventory Type :" FontSize="20" FontAttributes="Bold" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand"/>
                     <Picker SelectedIndex="{Binding SelectedInventoryTypeIndex}" ItemsSource="{Binding ItemList}" ItemDisplayBinding="{Binding ItemTypeName}" FontSize="18" Margin="0" HeightRequest="50" WidthRequest="150" HorizontalOptions="FillAndExpand" VerticalOptions="StartAndExpand" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
                 </StackLayout>
                 <Entry Placeholder="Enter Barcode" ReturnCommand="{Binding GetStockInBarcodeDetailCommand}" Text="{Binding BarcodeNumber}"/>
